--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
   padding: 20px;
   background-color: #5682d7;
   border-radius: 10px;
-
+  box-shadow: grey;
   color: white;
   font-family: Helvetica, sans-serif;
 }
